# Rougetsu

./: .gitignore  CMakeLists.txt
Graphics/: obj_draw_ctrl.h
Graphics/graph3d/: g3dCore.cpp  g3dCore.h  g3d_types.h  gra3d.h
Graphics/motion/: motion.h
ingame/plyr/: man_data.h  plyr_mdl.cpp  plyr_mdl.h
motion/: motion.h
plyr/: man_data.h  plyr_mdl.h
